--- a/share/html/NoAuth/css/web2/msie.css
+++ b/share/html/NoAuth/css/web2/msie.css
@@ -45,29 +45,12 @@
 %# those contributions and any derivatives thereof.
 %# 
 %# END BPS TAGGED BLOCK }}}
-div#body {
-    left: 0.25em;
-    height: 100%;
-    top: 1em;
-
-}
 
 
 #footer {
     padding: 1em;
 }
 
-
-div#header h1 {
- position: absolute;
- left: 7.25em;
- overflow: hidden;
- height: 1em;
- font-size: 1.4em;
- margin-top: 0.4em;
- right: 23.5em;
- padding: 0.25em;
-}
 
 
 #topactions {
@@ -88,31 +71,6 @@ div#header h1 {
 
 .topaction .select-queue {
     margin-top: 0.2em;
-}
-
-div#page-navigation ul#actions-menu {
-    margin-top: -2.9em;
-    margin-right: -0.2em;
-    border-top: 1px solid #ccc;
-    border-right: none;
-}
-
-
-div#page-navigation {
-    position: absolute;
-    top: 6.2em;
-    height: 1.8em;
-    background: #fff;
-    border-top: 2px solid #ccc;
-}
-
-
-
-div#page-navigation ul#page-menu {
-    margin-top: -2.5em;
-    margin-left: 4em;
-    background: none;
-    border: none;
 }
 
 
