--- a/share/html/NoAuth/css/web2/nav.css
+++ b/share/html/NoAuth/css/web2/nav.css
@@ -46,10 +46,9 @@
 %# 
 %# END BPS TAGGED BLOCK }}}
 div#nav {
- position: absolute;
- left: 0;
+ float: left;
  font-size: 0.9em;
- top: 3.2em;
+ margin-top: 0.5em;
  width: 10.5em;
  background: #fff;
  -moz-border-radius-bottomright: 0.5em;
@@ -135,9 +134,12 @@ div#nav a.selected:after {
 div#page-navigation {
  background: white;
  position: relative;
- width:100%;
  z-index: 10;
-
+ padding-left: 1em;
+ padding-right: 1em;
+ padding-top: 0.4em;
+ padding-bottom: 0.4em;
+ border-top: 1px solid #aaa;
 }
 
 
@@ -147,31 +149,19 @@ div#page-navigation ul {
 
 div#page-navigation ul#page-menu {
  display: block;
- position: absolute;
- left: 8em;
  font-size: 0.9em;
- top: 2.3em;
  min-height: 1em;
  background-color: white;
- right: 0em;
- padding-top:0.3em;
- padding-bottom:0.5em;
- border-top: 1px solid #aaa;
+ padding: 0em;
+ margin: 0em;
 
-}
-
-/* ie hack */
-* html div#page-navigation ul#page-menu {
-    left: 6.5em;
-    top: 3.2em;
-    padding-left: 2em;
 }
 
 
 div#page-navigation ul#actions-menu {
  position: absolute;
  right: 1em;
- top: 5.2em;
+ top: 2.3em;
  margin-top: 0em;
  padding: 0.25em;
  padding-left: 0.5em;
